--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 			<div style="letter-spacing: 1; font-size: 24;">
 				<div id="center">
 				    <div class="animated fadeInUp">
-						<pre align="middle"><a href="https://steamcommunity.com/id/pigpepe/" target="_blank"><i class="fab fa-steam"></i> <a onclick="alert('Dusk Nights#7568');"><i class="fab fa-discord"></i> </a><a href="https://vk.com/aleksandr_p20" target="_blank"><i class="fab fa-vk"></i></a></pre>
+						<pre align="middle"><a href="https://steamcommunity.com/id/tazgames/" target="_blank"><i class="fab fa-steam"></i> <a onclick="alert('Dusk Nights#7568');"><i class="fab fa-discord"></i> </a><a href="https://vk.com/aleksandr_p20" target="_blank"><i class="fab fa-vk"></i></a></pre>
 
 						<div id="clockDisplay" class="clockStyle">00:00:00</div>
 
