--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 	<canvas width="715" height="974"></canvas>
 
-	<title>T A Z B A T T L E R</title>
+	<title>B A D C O D E R</title>
 	
 	<script type="text/javascript">
 		function updateTitle() {
