--- a/index.html
+++ b/index.html
@@ -17,105 +17,20 @@
 
 	<title>B A D C O D E R</title>
 	
-	<script type="text/javascript">
-		function updateTitle() {
-		    setTimeout(function() {
-		        document.getElementsByTagName("title")[0].innerHTML = "T-A-Z-B-A-T-T-L-E-R";
-		    }, 300); // 7 символов
-		    setTimeout(function() {
-		        document.getElementsByTagName("title")[0].innerHTML = "-A-Z-B-A-T-T-L-E-R";
-		    }, 600);
-		    setTimeout(function() {
-		        document.getElementsByTagName("title")[0].innerHTML = "A-Z-B-A-T-T-L-E-R--";
-		    }, 900);
-		    setTimeout(function() {
-		        document.getElementsByTagName("title")[0].innerHTML = "-Z-B-A-T-T-L-E-R---";
-		    }, 1200);
-		    setTimeout(function() {
-		        document.getElementsByTagName("title")[0].innerHTML = "Z-B-A-T-T-L-E-R----";
-		    }, 1500);
-		    setTimeout(function() {
-		        document.getElementsByTagName("title")[0].innerHTML = "-B-A-T-T-L-E-R-----";
-		    }, 1800);
-		    setTimeout(function() {
-		        document.getElementsByTagName("title")[0].innerHTML = "B-A-T-T-L-E-R------";
-		    }, 2100);
-		    setTimeout(function() {
-		        document.getElementsByTagName("title")[0].innerHTML = "-A-T-T-L-E-R-------";
-		    }, 2400);
-		    setTimeout(function() {
-		        document.getElementsByTagName("title")[0].innerHTML = "A-T-T-L-E-R--------";
-		    }, 2700);
-		    setTimeout(function() {
-		        document.getElementsByTagName("title")[0].innerHTML = "-T-T-L-E-R---------";
-		    }, 3000);
-		    setTimeout(function() {
-		        document.getElementsByTagName("title")[0].innerHTML = "T-T-L-E-R----------";
-		    }, 3300);	    
-		    setTimeout(function() {
-		        document.getElementsByTagName("title")[0].innerHTML = "-T-L-E-R-----------";
-		    }, 3600);
-		    setTimeout(function() {
-		        document.getElementsByTagName("title")[0].innerHTML = "T-L-E-R------------";
-		    }, 3900);
-		    setTimeout(function() {
-		        document.getElementsByTagName("title")[0].innerHTML = "-L-E-R-------------";
-		    }, 4200);
-		    setTimeout(function() {
-		        document.getElementsByTagName("title")[0].innerHTML = "L-E-R--------------";
-		    }, 4500);
+	<script>
+        ///// magic title changer big wooshies /////
+        var text = ["A", "An", "Ann", "Anna", "AnnaB", "AnnaBe", "AnnaBes", "AnnaBest", "AnnaBes", "AnnaBe", "AnnaB", "Anna", "Ann", "An", "A"];
+        var counter = 0;
+        var inst = setInterval(change, 850);
 
-		    setTimeout(function() {
-		        document.getElementsByTagName("title")[0].innerHTML = "-E-R---------------";
-		    }, 4800);
-
-		    setTimeout(function() {
-		        document.getElementsByTagName("title")[0].innerHTML = "--------------T";
-		    }, 5100);
-		    setTimeout(function() {
-		        document.getElementsByTagName("title")[0].innerHTML = "-------------T-";
-		    }, 5400);
-		    setTimeout(function() {
-		        document.getElementsByTagName("title")[0].innerHTML = "------------T-A";
-		    }, 5700);
-		    setTimeout(function() {
-		        document.getElementsByTagName("title")[0].innerHTML = "-----------T-A-";
-		    }, 6000);
-		    setTimeout(function() {
-		        document.getElementsByTagName("title")[0].innerHTML = "----------T-A-Z";
-		    }, 6300);
-		    setTimeout(function() {
-		        document.getElementsByTagName("title")[0].innerHTML = "---------T-A-Z-";
-		    }, 6600);
-		    setTimeout(function() {
-		        document.getElementsByTagName("title")[0].innerHTML = "--------T-A-Z-B";
-		    }, 6900);
-		    setTimeout(function() {
-		        document.getElementsByTagName("title")[0].innerHTML = "-------T-A-Z-B-";
-		    }, 7200);
-		    setTimeout(function() {
-		        document.getElementsByTagName("title")[0].innerHTML = "------T-A-Z-B-A";
-		    }, 7500);
-		    setTimeout(function() {
-		        document.getElementsByTagName("title")[0].innerHTML = "-----T-A-Z-B-A-";
-		    }, 7800);
-		    setTimeout(function() {
-		        document.getElementsByTagName("title")[0].innerHTML = "----T-A-Z-B-A-T";
-		    }, 8100);	    
-		    setTimeout(function() {
-		        document.getElementsByTagName("title")[0].innerHTML = "---T-A-Z-B-A-T-T";
-		    }, 8400);
-		    setTimeout(function() {
-		        document.getElementsByTagName("title")[0].innerHTML = "--T-A-Z-B-A-T-T-L";
-		    }, 8700);
-		    setTimeout(function() {
-		        document.getElementsByTagName("title")[0].innerHTML = "-T-A-Z-B-A-T-T-L-E";
-		        updateTitle();
-		    }, 9000);
-		}
-
-		updateTitle()
-	</script>
+        function change() {
+            document.title = text[counter];
+            counter++;
+            if (counter >= text.length) {
+                counter = 0;
+            }
+        }
+    </script>
 
 	<audio id="audio1" preload loop>
 		<source type="audio/mp3" src="1.mp3">
@@ -205,7 +120,7 @@
 			<!-- <pre><input type="range" id="value" min="0" max="1" step="0.01"> -->
 
 			<!-- </pre> -->
-			<p>T A Z B A T T L E R</p>
+			<p>B A D C O D E R</p>
 			<div style="letter-spacing: 1; font-size: 24;">
 				<div id="center">
 				    <div class="animated fadeInUp">
