Добавил бегущую строку

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	
 	<script>
         ///// magic title changer big wooshies /////
-        var text = ["A", "An", "Ann", "Anna", "AnnaB", "AnnaBe", "AnnaBes", "AnnaBest", "AnnaBes", "AnnaBe", "AnnaB", "Anna", "Ann", "An", "A"];
+        var text = ["B", "Ba", "Bad", "Badc", "Badco", "Badcode", "Badcoder", "Badcoder", "Badcode", "Badcod", "Badco", "Badc", "Bad", "Ba", "B"];
         var counter = 0;
         var inst = setInterval(change, 850);
 
