--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 		}
 
 		.center {
-			font-family: 'Montserrat', sans-serif;
+			font-family: 'Calibri', sans-serif;
 
 			position: fixed; /* or absolute */
 			top: 50%;
