--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
 
 	<link rel="stylesheet" href="css/all.css">
+	<link href="favicon.ico" rel="icon">
 
+	
 	<style>
 		p {
 			font-size: 36px;
