--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 	<link rel="stylesheet" href="css/all.css">
 	<link href="favicon.ico" rel="icon">
+     	<link href="favicon.ico" rel="shortcut icon">
 
 	
 	<style>
