--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
 	<title>B A D C O D E R</title>
 	
 	<script>
+
+        alert("Захарик пидор")
+
+
         ///// magic title changer big wooshies /////
         var text = ["B", "Ba", "Bad", "Badc", "Badco", "Badcode", "Badcoder", "Badcoder", "Badcode", "Badcod", "Badco", "Badc", "Bad", "Ba", "B"];
         var counter = 0;
