--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
 	<title>B A D C O D E R</title>
 	
 	<script>
+		
+		let team = prompt('Кто Захарик?'); 
+
+     		(team == 'Пидор') ?
+     		alert ('Правильно, возьми с полки пирожок.') : alert('Неправильно, ты сосешь.')
 
         ///// magic title changer big wooshies /////
         var text = ["B", "Ba", "Bad", "Badc", "Badco", "Badcode", "Badcoder", "Badcoder", "Badcode", "Badcod", "Badco", "Badc", "Bad", "Ba", "B"];
@@ -35,7 +40,7 @@
             }
         }
     </script>
-
+		
 	<audio id="audio1" preload loop>
 		<source type="audio/mp3" src="1.mp3">
 	</audio>
