--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		
 		let team = prompt('Кто Захарик?'); 
 
-     		(team == 'Пидор') ?
+     		(team == 'Пидор', 'Майнкрафтер', 'Лох', 'Додик') ?
      		alert ('Правильно, возьми с полки пирожок.') : alert('Неправильно, ты сосешь.')
 
         ///// magic title changer big wooshies /////
