--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
 
 	
 	<style>
-		p {
-			font-size: 36px;
-			margin: 0;
-			letter-spacing: 0px;
+		@font-face {
+			font-family: "blogger-sans";
+			src: url("webfonts/BloggerSans-Medium.woff") format('woff');
 		}
 	</style>
 
@@ -21,12 +20,6 @@
 	<title>B A D C O D E R</title>
 	
 	<script>
-		
-		let team = prompt('Кто Захарик?'); 
-
-     		(team == 'Пидор', 'Майнкрафтер', 'Лох', 'Додик') ?
-     		alert ('Правильно, возьми с полки пирожок.') : alert('Неправильно, ты сосешь.')
-
         ///// magic title changer big wooshies /////
         var text = ["B", "Ba", "Bad", "Badc", "Badco", "Badcode", "Badcoder", "Badcoder", "Badcode", "Badcod", "Badco", "Badc", "Bad", "Ba", "B"];
         var counter = 0;
@@ -76,7 +69,7 @@
 		}
 
 		.center {
-			font-family: 'Calibri', sans-serif;
+			font-family: blogger-sans;
 
 			position: fixed; /* or absolute */
 			top: 50%;
@@ -88,7 +81,7 @@
 			    -moz-animation: fadein 3s; /* Firefox */
 			    -webkit-animation: fadein 3s; /* Safari and Chrome */
 			    -o-animation: fadein 3s; /* Opera */
-		}â&#128;&#139;
+		};
 
 		@keyframes fadein {
 		    from {
