--- a/index.html
+++ b/index.html
@@ -7,10 +7,17 @@
 
 	
 	<style>
+		p {
+			font-size: 36px;
+			margin: 0;
+			letter-spacing: 0px;
+		}
+
 		@font-face {
 			font-family: "blogger-sans";
 			src: url("webfonts/BloggerSans-Medium.woff") format('woff');
 		}
+
 	</style>
 
 	<body oncontextmenu="return false" unselectable="on" onselectstart="return false;">
@@ -20,6 +27,7 @@
 	<title>B A D C O D E R</title>
 	
 	<script>
+
         ///// magic title changer big wooshies /////
         var text = ["B", "Ba", "Bad", "Badc", "Badco", "Badcode", "Badcoder", "Badcoder", "Badcode", "Badcod", "Badco", "Badc", "Bad", "Ba", "B"];
         var counter = 0;
@@ -81,7 +89,7 @@
 			    -moz-animation: fadein 3s; /* Firefox */
 			    -webkit-animation: fadein 3s; /* Safari and Chrome */
 			    -o-animation: fadein 3s; /* Opera */
-		};
+		}â&#128;&#139;
 
 		@keyframes fadein {
 		    from {
