--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 
 	<link rel="stylesheet" href="css/all.css">
-	<link href="favicon.ico" rel="icon">
-     	<link href="favicon.ico" rel="shortcut icon">
+	<link href="favicon.png" rel="icon">
+     	<link href="favicon.png" rel="shortcut icon">
 
 	
 	<style>
@@ -29,7 +29,7 @@
 	<script>
 
         ///// magic title changer big wooshies /////
-        var text = ["B", "Ba", "Bad", "Badc", "Badco", "Badcode", "Badcoder", "Badcoder", "Badcode", "Badcod", "Badco", "Badc", "Bad", "Ba", "B"];
+        var text = ["B", "B A", "B A D", "B A D C", "B A D C O", "B A D C O D", "B A D C O D E", "B A D C O D E R", "B A D C O D E", "B A D C O D", "B A D C O", "B A D C", "B A D", "B A", "B"];
         var counter = 0;
         var inst = setInterval(change, 850);
 
@@ -89,7 +89,7 @@
 			    -moz-animation: fadein 3s; /* Firefox */
 			    -webkit-animation: fadein 3s; /* Safari and Chrome */
 			    -o-animation: fadein 3s; /* Opera */
-		}â&#128;&#139;
+		};
 
 		@keyframes fadein {
 		    from {
