--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 			<div style="letter-spacing: 1; font-size: 24;">
 				<div id="center">
 				    <div class="animated fadeInUp">
-						<pre align="middle"><a href="https://steamcommunity.com/id/badcoderz/" target="_blank"><i class="fab fa-steam"></i> <a onclick="alert('badcoder#3101');"><i class="fab fa-discord"></i> </a><a href="https://vk.com/badcoderz" target="_blank"><i class="fab fa-vk"></i></a></pre>
+						<pre align="middle"><a href="https://steamcommunity.com/id/badcoderz/" target="_blank"><i class="fab fa-steam"></i> <a onclick="alert('badcoder.#4497');"><i class="fab fa-discord"></i> </a><a href="https://vk.com/badcoderz" target="_blank"><i class="fab fa-vk"></i></a></pre>
 
 						<div id="clockDisplay" class="clockStyle">00:00:00</div>
 
