--- a/index.html
+++ b/index.html
@@ -124,6 +124,78 @@
 		    }
 		}
 	</style>
+
+	<style>
+
+		#hint {
+			margin: -440px;
+			padding-top: 0px;
+			text-align: center;
+			color: #EEEEEE;
+			font-family: blogger-sans;
+			font-size: 24pt;
+			max-width: 1800px;
+
+			transition: opacity 0.5s;
+			opacity: 11;
+		}
+
+		#hint.fade {
+			opacity: 0;
+		}
+		
+	</style>
+
+	<div class="center">
+		<center>
+		<p id="hint"></p>
+
+		<script>
+
+			function shuffle(a) {
+				var jar, x, i
+				for (i = a.length - 1; i > 0; i--) {
+					jar = Math.floor(Math.random() * (i + 1))
+					x = a[i]
+					a[i] = a[jar]
+					a[jar] = x
+				}
+				return a
+			}
+
+			var hints = shuffle([
+				'Hello World, my lover <3 !',
+				'Man, I haven’t come up with anything, but soon there will be something.',
+				'I love you, pussy!',
+			])
+
+			var curHintID = -1
+			function nextHint() {
+				var el = document.getElementById('hint')
+				el.classList.add('fade')
+				setTimeout(function() {
+					curHintID ++
+					if (curHintID >= hints.length) curHintID = 0
+					el.innerHTML = hints[curHintID]
+					el.classList.remove('fade')
+				}, 500)
+			}
+			nextHint()
+			setInterval(nextHint, 5000)
+
+			function clamp(num){
+				return Math.min(Math.max(num, 0), 1)
+			}
+
+			var left = 1, stLeft = 5, filesTotal, wsTotal, filesLeft, wsLeft, finished;
+			function updateProgress() {
+				if (!filesLeft || !wsLeft) return
+				left = finished ? 0 : clamp(stLeft / 5) * 0.5 + clamp(filesLeft / filesTotal) * 0.1 + clamp(wsLeft / wsTotal) * 0.4
+			}	
+			
+		</script>
+	</center>
+	</div>
 	
 	<div class="center">
 		<center>
