--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 			text-align: center;
 			color: #EEEEEE;
 			font-family: blogger-sans;
-			font-size: 24pt;
+			font-size: 26pt;
 			max-width: 1800px;
 
 			transition: opacity 0.5s;
@@ -167,6 +167,7 @@
 				'Hello World, my lover <3 !',
 				'Man, I haven’t come up with anything, but soon there will be something.',
 				'I love you, pussy!',
+				"It's russian web-page, yea, okey?",
 			])
 
 			var curHintID = -1
