--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@
 				'Man, I haven’t come up with anything, but soon there will be something.',
 				'I love you, pussy!',
 				"It's russian web-page, yea, okey?",
+				'There is a music player, two buttons under the time <3 .',
 			])
 
 			var curHintID = -1
