--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 	<style>
 		p {
 			font-size: 46px;
-			margin: 30;
-			letter-spacing: 5px;
+			margin: 10;
+			letter-spacing: 3px;
 		}
 
 		@font-face {
@@ -202,10 +202,10 @@
 	<div class="center">
 		<center>
 			<p>Q U M E T</p>
-			<div style="letter-spacing: 2; font-size: 22;">
+			<div style="letter-spacing: 3; font-size: 24;">
 				<div id="center">
 				    <div class="animated fadeInUp">
-						<pre align="middle"><a href="https://steamcommunity.com/id/qumeta/" target="_blank"><i class="fab fa-steam"></i> <a onclick="alert('qumet.#8888');"><i class="fab fa-discord"></i> </a><a href="https://vk.com/losstoanna" target="_blank"><i class="fab fa-vk"></i></a> <a href="http://badcoder.gq/police-guide"><i class="fa fa-info"></i></a></pre>
+						<pre align="middle"><a href="https://steamcommunity.com/id/qumeta/" target="_blank"><i class="fab fa-steam"></i> <a onclick="alert('qumet.#8888');"><i class="fab fa-discord"></i> </a><a href="https://vk.com/losstoanna" target="_blank"><i class="fab fa-vk"></i></a></pre>
 
 						<div id="clockDisplay" class="clockStyle">00:00:00</div>
 
